components/31-molecules/teaser/_teaser.scss
//
// Basic teaser theming.
//
.teaser {
  position: relative;
  list-style: none;

  h3.bg-none {
    position: relative;
    margin: -13px 0 20px;
    z-index: 3;

    span {
      @include theme('background-color', 'color-secondary');

      padding: 2.5px 10px;
    }
  }

  .date {
    @include small-text();
    @include theme('color', 'color-zero', 'help-text-color');
    position: relative;
    margin: 10px 0;
    z-index: 3;

    span {
      @include icon('calendar');

      &::before {
        position: relative;
        top: 6px;
        font-size: 1.2rem;
      }
    }
  }

  .tag-list-wrapper {
    margin: 15px 0 -5px;
  }

  .teaser-links {
    margin: 20px 0;
    list-style-type: none;

    li {
      @include medium-text();
    }

    a {
      @include normal-text();
    }
  }

  a.read-more {
    @include bold-text();
  }

  a.teaser-overlay-link {
    @include reset-link-background;
    @include element-states(transparent, transparent, background-color);

    position: absolute;
    top: -20px;
    right: 0;
    bottom: 0;
    left: 0;
    text-indent: 200%;
    white-space: nowrap;
    overflow: hidden;
    z-index: z('teaser', 'overlay-link');
  }

  .teaser-content {
    @include medium-text();

    display: flex;
    flex-direction: column;
    height: 100%;

    a {
      position: relative;
      z-index: z('teaser', 'content-link');
    }

    .content__first {
      position: relative;
      order: 1;

      .tags-label-wrapper {
        position: absolute;
        top: -15px;
        left: 20px;
        margin: 0;
        z-index: 3;

        .label ~ .tag-list-wrapper {
          margin-left: 5px;
        }

        .tag-list-wrapper {
          display: inline-block;
          position: relative;
          top: -4px;
          margin: 0;
        }
      }
    }

    .content__second {
      position: relative;
      order: 2;
      height: 100%;
      padding: 0 20px 20px;

      > i {
        float: left;
        line-height: 1;

        &::before {
          display: block;
          font-size: 38px;

          @include phablet {
            margin-bottom: 20px;
          }
        }

        @include phablet {
          float: none;
        }

        + h3 {
          margin-left: 53px;

          @include phablet {
            margin-left: 0;
          }
        }
      }

      p {
        @include theme('color', 'default-text-color', 'help-text-color');
        margin: 20px 0;
        line-height: 1.4rem;
      }
    }
  }

  &.no-image,
  .teaser--no-images & {
    h3 {
      margin: 0;
    }

    .content__second {
      padding: 0;
    }

    // Make sure the image is hidden. But it's better not to load it.
    .figure-wrapper {
      display: none;
    }
  }

  &.teaser--background {
    .content__second {
      @include theme('background-color', 'color-none');
      padding: 0 20px 20px;
    }

    &.no-image,
    .teaser--no-images & {
      h3 {
        margin: 0;
      }

      .content__second {
        padding: 20px;
      }
    }
  }

  &.teaser--square {
    .content__first {
      order: 2;
    }

    .content__second {
      position: absolute;
      bottom: 0;
      order: 1;
      width: 100%;
      height: auto;
      padding: 20px 100px 20px 20px;

      h3 {
        margin: 0;

        span {
          @include theme('background-color', 'color-none', 'heading-with-light-bg-background-color');
        }
      }

      .date {
        display: inline-block;
        margin: -6px 0 0;

        span {
          @include theme('background-color', 'color-none', 'heading-with-light-bg-background-color');
          padding: 5px 10px;
          line-height: 1.2;
          box-decoration-break: clone;
        }

        &::before {
          @include theme('background-color', 'color-none', 'heading-with-light-bg-background-color');
        }
      }

      .read-more {
        @include read-more-icon-link();

        position: absolute;
        right: 0;
        bottom: 0;
      }
    }
  }

  &.teaser--square--double {
    .figure-wrapper__mobile {
      @include desktop {
        display: none;
      }
    }

    .figure-wrapper__desktop {
      display: none;

      @include desktop {
        display: block;
      }
    }

    h3 {
      @include desktop-and-below {
        font-size: .9rem;
        line-height: 1.15rem;
      }
    }
  }

  &.teaser--simple {
    .content__second {
      @include theme('background-color', 'color-none');
      position: static;
      padding: 20px 60px 20px 20px;

      @include phablet {
        padding: 30px 60px 30px 30px;
      }

      h3 {
        display: flex;
        align-items: center;
        height: 100%;
        margin: 0;

        @include phablet {
          display: block;
          height: auto;
          margin: 0 15px 20px 0;
        }

        span {
          padding: 0;
          background-color: transparent;
        }
      }

      p {
        display: none;

        @include tablet {
          display: block;
        }
      }

      .teaser-links {
        display: none;
        margin: 0;

        @include tablet {
          display: block;
        }
      }

      .read-more {
        @include read-more-icon-link();

        position: absolute;
        right: 0;
        bottom: 0;
      }
    }

    a.teaser-overlay-link {
      top: 0;
    }
  }

  &.teaser--inverted {
    .content__second {
      @include theme('background-color', 'color-tertiary-light');
    }
  }

  &.teaser--wide {
    @include theme('border-color', 'color-primary', 'teaser-wide-border-color');

    margin: 0 0 40px;
    padding: 0 0 30px;
    border-bottom: 1px solid color('blue');

    h3 {
      margin: 0 0 20px;

      &.bg-none span {
        padding-right: 0;
        padding-left: 0;
      }
    }

    .tag-list-wrapper {
      margin: 20px 0;
    }

    .icon-list,
    .location {
      @include small-text();
      @include theme('color', 'help-text-color', 'teaser-location-color');

      margin: 0 0 10px;
    }

    .location {
      @include bold-text;

      i {
        margin-right: .3rem;
        font-size: 1.5em;
        vertical-align: middle;
      }
    }

    .teaser-content {
      display: flex;
      flex-direction: row;
      flex-wrap: wrap;

      @include tablet {
        flex-wrap: nowrap;
      }
    }

    .content__first,
    .content__second {
      flex-basis: 100%;
    }

    .content__first {
      order: 1;
      margin-bottom: $gutter-width;

      @include tablet {
        flex: 0 0 230px;
        margin-right: 30px;
        margin-bottom: 0;
      }
    }

    .content__second {
      order: 2;
      padding: 0;

      .dash-separated-list {
        @include theme('color', 'default-text-color', 'help-text-color');
        @include medium-text();
        margin: 10px 0;

        li {
          margin-bottom: 0;
        }
      }

      p {
        @include medium-text();
        margin-top: 10px;
      }
    }
  }
}

